# py4ai-core

./: .buildinfo  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: continous-delivery.yml  continous-integration.yml
_sources/api/: py4ai.core.config.rst.txt  py4ai.core.data.layer.common.rst.txt  py4ai.core.data.layer.fs.rst.txt  py4ai.core.data.layer.mongo.rst.txt  py4ai.core.data.layer.pandas.rst.txt  py4ai.core.data.layer.rst.txt  py4ai.core.data.layer.sqlalchemy.rst.txt  py4ai.core.data.model.rst.txt  py4ai.core.data.rst.txt  py4ai.core.datasets.rst.txt  py4ai.core.logging.rst.txt  py4ai.core.rst.txt  py4ai.core.tests.rst.txt  py4ai.core.types.rst.txt  py4ai.core.typing.rst.txt  py4ai.core.utils.rst.txt  py4ai.rst.txt
api/: modules.html  py4ai.core.config.html  py4ai.core.data.html  py4ai.core.data.layer.common.html  py4ai.core.data.layer.fs.html  py4ai.core.data.layer.html  py4ai.core.data.layer.mongo.html  py4ai.core.data.layer.pandas.html  py4ai.core.data.layer.sqlalchemy.html  py4ai.core.data.model.html  py4ai.core.datasets.html  py4ai.core.html  py4ai.core.logging.html  py4ai.core.tests.html  py4ai.core.types.html  py4ai.core.typing.html  py4ai.core.utils.html  py4ai.html
intro/: readme.html
py4ai/core/: _version.py
py4ai/core/config/: __init__.py  defaults.yml
py4ai/core/data/layer/: __init__.py
py4ai/core/data/layer/common/: repository.py
py4ai/core/data/layer/fs/: criteria.py  repository.py  serializer.py  tables.py
py4ai/core/data/layer/mongo/: __init__.py  archivers.py  criteria.py  dao.py  repository.py  serializer.py
py4ai/core/data/layer/pandas/: archivers.py  criteria.py  dao.py  databases.py  repository.py
py4ai/core/data/layer/sqlalchemy/: criteria.py  repository.py  serializer.py
py4ai/core/data/layer/v0/mongo/: archivers.py  dao.py
py4ai/core/data/layer/v0/pandas/: archivers.py  dao.py  databases.py
py4ai/core/data/layer/v1/common/: __init__.py  criteria.py  executors.py  repository.py  serialiazer.py
py4ai/core/data/layer/v1/fs/: __init__.py  criteria.py  repository.py  serializer.py  tables.py
py4ai/core/data/layer/v1/mongo/: __init__.py  criteria.py  repository.py  serializer.py
py4ai/core/data/layer/v1/pandas/: criteria.py  repository.py
py4ai/core/data/layer/v1/sqlalchemy/: criteria.py  repository.py  serializer.py
py4ai/core/data/model/: core.py  ml.py  text.py
py4ai/core/datasets/: __init__.py
py4ai/core/logging/: __init__.py  defaults.py
py4ai/core/tests/: core.py
py4ai/core/typing/: __init__.py
py4ai/core/utils/: cloud.py  decorators.py  dict.py  email.py  pandas.py
requirements/: requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt
sphinx/source/: conf.py  index.rst
sphinx/source/userguide/: index.rst
tests/: __init__.py  test_config.py  test_data_layer_pandas_archivers.py  test_data_layer_pandas_dao.py  test_data_layer_pandas_databases.py  test_data_model_ml.py  test_data_model_text.py  test_datasets.py  test_iterables.py  test_logging.py  test_model_core.py  test_mongo_bindings.py  test_utils.py
tests/core/: test_config.py  test_logging.py  test_utils.py
tests/core/data/layer/: base.py
tests/core/data/layer/common/: test_repository.py
tests/core/data/layer/fs/: test_repository.py
tests/core/data/layer/mongo/: test_repository.py
tests/core/data/layer/pandas/: test_criteria.py  test_repository.py
tests/core/data/layer/sqlalchemy/: test_repository.py
tests/core/data/layer/v0/mongo/: test_bindings.py
tests/core/data/layer/v0/pandas/: test_archivers.py  test_dao.py  test_databases.py
tests/core/data/layer/v1/: base.py
tests/core/data/layer/v1/common/: test_repository.py
tests/core/data/layer/v1/fs/: __init__.py  test_repository.py
tests/core/data/layer/v1/mongo/: test_repository.py
tests/core/data/model/: test_core.py  test_iterables.py  test_ml.py  test_text.py
tests/resources/data/: defaults.yml  specific.yml
userguide/: index.html
(+3 files in other folders)
