[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "py4ai-core"
version = "v1.0.3-rc"
authors = [
    "Nicola Donelli <nicoladonelli87@gmail.com>",
    "Enrico Deusebio <edeusebio85@gmail.com>",
]
description = "A Python library of data structures optimized for machine learning tasks"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/NicolaDonelli/py4ai-core"
license = "MIT"
readme = "README.md"
packages = [
    { include = "py4ai" },
]


[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "py4ai/core/_version.py"
versionfile_build = "py4ai/core/_version.py"
tag_prefix = "v"
parentdir_prefix = "py4ai-core"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=./py4ai/core --cov-config=./pyproject.toml --cov-report term"
testpaths = "tests"

[tool.coverage.run]
branch = true
concurrency = ["greenlet"]
omit = [
    "py4ai/core/__init__.py",
    "py4ai/core/_version.py",
    "py4ai/core/utils/cloud.py",
    "py4ai/core/utils/email.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.flake8]
exclude = "versioneer.py,py4ai/core/_version.py"
per-file-ignores = [
    '__init__.py:F401',
    'tests/*: D'
]
ignore = [
# Ignored by black
'E203', 'E266', 'E501', 'W503',
# Ignored to conform to PEP257
'D203', 'D212', 'D213', 'D214', 'D215', 'D404', 'D405', 'D406', 'D407', 'D408', 'D409', 'D410', 'D411', 'D413', 'D415', 'D416', 'D417',
# Ignored to work with Sphinx
'RST303', 'RST304', 'RST307']
# line length is intentionally set to 80 here because black uses Bugbear
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length for more details
max-line-length = "80"
max-complexity = "18"
select = ['B','C','D','E','F','W','T4','B9','RST','DAR']
docstring_style = "sphinx"

[tool.isort]
py_version = 3
profile = 'black'
skip = ['py4ai/core/_version.py']
known_first_party = ['py4ai/core','tests']
skip_gitignore = true

[tool.sphinx]
package_dir = "py4ai/core"
name = "py4ai-core"

[tool.bandit]
targets = ["py4ai/core"]

[tool.licensecheck]
using = "requirements:requirements/requirements.txt"
zero = true

[tool.mypy]
packages = [ "py4ai", "tests" ]
namespace_packages = true
follow_imports = "silent"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
warn_redundant_casts = true
strict_equality = true
exclude = ['py4ai/core/_version\.py$']

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "bson.*",
    "cfg_load.*",
    "dill.*",
    "matplotlib.*",
    "mongomock_motor.*",
    "motor.*",
    "pandas.*",
    "pymongo.*",
    "scipy.*",
    "seaborn.*",
    "sklearn.*",
    "sqlalchemy.*",
]

[tool.poetry.dependencies]
python = ">3.8,<4.0"
cfg-load = ">=0.8"
deprecated = ">=1.2.12"
dill = ">=0.3"
motor = "==3.0.0" # This should be updated
pandas = ">=1.0"
pydantic = ">=1.9,<2.0" # This should be updated
pymongo = ">=4.0"
scipy = ">=1.7.3"
setuptools = ">=47.1"
sqlalchemy = "==1.4.39" # This should be updated
tornado = ">=6.1"
tomli = ">=2.0.1"
typeguard = ">=2.13.0"
typing-extensions = ">=4.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = ">=1.7.4"}
licensecheck = ">=2023.1.0,<2023.2.0"
Sphinx = ">4.1"
aiosqlite = ">=0.17"
black = ">=21.12b0"
darglint = ">=1.8.1"
flake8-docstrings = ">=1.6"
flake8-rst-docstrings = ">=0.2.5"
flake8 = ">=4.0.1"
Flake8-pyproject = ">=1.1.0"
isort = ">=5.10.1"
m2r2 = ">=0.3.2,<0.3.3"
mongomock = ">=3.19"
mongomock_motor = "==0.0.12" # This should be updated
mypy-extensions = "==0.4.3" # This should be updated
mypy = "==0.991" # This should be updated
pip-tools = ">=6.6.2"
pytest-cov = ">=3.0"
pytest = ">=6.2"
recommonmark = ">=0.7"
sphinx-rtd-theme = ">=0.5"
twine = ">=3.8"
versioneer = ">=0.21"
